// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`stylesheet-tree-operations get-ancestors should get ancestors of a nested item 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "",
        "parent": null,
        "path": "/",
      },
      {
        "hasChildren": true,
        "isFolder": true,
        "name": "_Test Parent",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/_Test Parent",
      },
      {
        "hasChildren": false,
        "isFolder": true,
        "name": "_Test Child",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_Test Parent",
        },
        "path": "/_Test Parent/_Test Child",
      },
    ],
  },
}
`;

exports[`stylesheet-tree-operations get-children should get child items of a folder 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "_TestTreeStylesheet.css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/_Test Folder",
        },
        "path": "/_Test Folder/_TestTreeStylesheet.css",
      },
    ],
    "total": 1,
  },
}
`;

exports[`stylesheet-tree-operations get-root should get root level stylesheets 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "dropdownStyles.css",
        "parent": null,
        "path": "/dropdownStyles.css",
      },
      {
        "hasChildren": false,
        "isFolder": false,
        "name": "index.css",
        "parent": null,
        "path": "/index.css",
      },
    ],
    "total": 2,
  },
}
`;

exports[`stylesheet-tree-operations get-search should search for stylesheets 1`] = `
{
  "content": [],
  "structuredContent": {
    "items": [
      {
        "isFolder": false,
        "name": "_TestTreeStylesheet.css",
        "parent": {
          "id": "00000000-0000-0000-0000-000000000000",
          "path": "/",
        },
        "path": "/_TestTreeStylesheet.css",
      },
    ],
  },
}
`;
